Fix z-index

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -11,7 +11,7 @@
   padding: 0 140px;
 
   min-height: 70px;
-  z-index: 99999;
+  z-index: 999999999999;
 
   background: #FFFFFF;
   box-shadow: 0 10px 20px $DarkShade5;
